# kd-single-applcation

./: CMakeLists.txt  KDSingleApplicationConfig.cmake.in
lib/: kdsingleapplication.lib
